@startuml

title __VIEWS's Class Diagram__\n

  namespace es.ull {
    namespace views {
      class es.ull.views.VistaCovid {
          + VistaCovid()
      }
    }
  }
  

  namespace es.ull {
    namespace views {
      class es.ull.views.VistaTwitter {
          + VistaTwitter()
      }
    }
  }
  

  namespace es.ull {
    namespace views {
      class es.ull.views.VistaWeather {
          + VistaWeather()
      }
    }
  }
  

  es.ull.views.VistaCovid -up-|> javax.swing.JDesktopPane
  es.ull.views.VistaCovid o-- es.ull.menus.CovidMenu : covidMenu
  es.ull.views.VistaTwitter -up-|> javax.swing.JDesktopPane
  es.ull.views.VistaTwitter o-- es.ull.menus.TwitterMenu : menuTwitter
  es.ull.views.VistaWeather -up-|> javax.swing.JDesktopPane
  es.ull.views.VistaWeather o-- es.ull.menus.WeatherMenu : weatherMenu


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
